k8s/apphost-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apphost
  namespace: eshop
spec:
  selector:
    app: apphost
  ports:
  - port: 80
    targetPort: 80
    name: http
  - port: 443
    targetPort: 443
    name: https
  type: ClusterIP
