k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apphost-ingress
  namespace: eshop
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - eshop.aimbis.com
    secretName: apphost-tls
  rules:
  - host: eshop.aimbis.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apphost
            port:
              number: 80
